--- a/style.css
+++ b/style.css
@@ -51,33 +51,63 @@ body{
 }
 #information{
     color: white;
-    width: 100vw;
-    display:flex;
+    display: flex;
+    justify-content:center;
     align-items:center;
-    flex-direction: column;
+
+}
+.line{
+    background-color:rgb(240,94,237);
+    width:100px;
+    height:7px;
     position: absolute;
-    top: 40vw;
+    top: 38vw;
     margin: 0;
+}
+.mot{
+    font-family: "Franklin Gothic Demi";
+    font-size: 24pt;
+    line-height: 0vh;
+    width:100vw;
+    display: flex;
+    align-items:center;
+    flex-direction:column;
+    position: absolute;
+    top: 35vw;
+    margin: 0;
+}
+.cu{
+    background:url(./img/btn/contactUs.png);
+    background-size:cover;
+    position:absolute;
+    top:55vw;
+    height:48px;
+    width:196px;/*
+    display: flex;
+    justify-content:center;
+    align-items:center;*/
+
 }
 .info{
     font-family: "Franklin Gothic Book";
     font-size: 20pt;
-    line-height: 5.97vh;
-   /* width: 100vw;
+    line-height: 0vh;
+    width:100vw;
     display: flex;
     align-items:center;
-    flex-direction: column;
+    flex-direction:column;
     position: absolute;
     top: 40vw;
-    margin: 0;*/
+    margin: 0;
 }
 
 #bottom{
     font-family: "Franklin Gothic Book";
     font-size: 16pt;
     background-color:white;
-    color: rgb(217,215,218);
-    line-height: 6.60vh;
+    color: black;
+    height:6.6vh;
+    line-height: 3vh;
     width: 100vw;
     display: flex;
     justify-content:center;
