--- a/style.css
+++ b/style.css
@@ -9,9 +9,12 @@
 
 body{
     background: rgb(0, 0, 0);
+    width: 100vw; /*不確定需不需要*/
+    height: auto;
     margin: 0;
     overflow-x: hidden;
 }
+
 
 /*top bar part*/
 #navbar{
@@ -69,134 +72,121 @@ body{
     right: 8.54vw;
 }
 
+
 /*picture part*/
 .pic{
     width: 100vw;
-    height: 70vh;
+    height: 60vh;
     display: flex;
     flex-direction: row;
-    /*justify-content: space-around;*/
     position: relative;
-    top: 0;
+    top: 10vh;
     z-index: -1;
 }
 
 .people{
-    width: 25.22vw;
-    height: auto;
-    position: relative;
-    display: block;
+    width: 17.22vw;
+    height: 60vh;
+    position: absolute;
+    display: flex;
     top: 50%;
     transform: translateY(-50%);
-    margin: 0 3.995vw;
-    left: -6.5125vw;
 }
 
-#zhuang{
-    background: url(./img/nameCard/Zhuang.png) no-repeat center / contain;
-}
-
-#lu{
-    background: url(./img/nameCard/Lu.png) no-repeat center / contain;
-}
-
-#shen{
-    background: url(./img/nameCard/Shen.png) no-repeat center / contain;
-}
-
-#huang{
-    background: url(./img/nameCard/Huang.png) no-repeat center / contain;
-}
-
-#tu{
-    background: url(./img/nameCard/Tu.png) no-repeat center / contain;
-}
+#lu    { background: url(./img/nameCard/Lu.png) no-repeat center / contain; left: -9.03%; }
+#shen  { background: url(./img/nameCard/Shen.png) no-repeat center / contain; left: 16.18%; }
+#zhuang{ background: url(./img/nameCard/Zhuang.png) no-repeat center / contain; left: 41.39%; }
+#huang { background: url(./img/nameCard/Huang.png) no-repeat center / contain; left: 66.6%; }
+#tu    { background: url(./img/nameCard/Tu.png) no-repeat center / contain; left: 91.81%; }
 
 #arrow-left, #arrow-right{
-    width: 4.17%;
-    height: 4.17%;
+    width: 8vw;
+    height: 8vh;
     position: absolute;
-    top: 40%;
+    top: 26vh;
 }
 
 #arrow-left{
     background: url(./img/btn/arrowLeft.png) no-repeat top / contain;
-    left: 2.92%;
+    left: 2.92vw;
 }
 
 #arrow-right{
     background: url(./img/btn/arrowRight.png) no-repeat top / contain;
-    right: 2.92%;
+    right: 2.92vw;
 }
+
 
 /*information part*/
 #information{
     width: 100vw;
-    height: 70vh; /*要加位子*/
+    height: 70vh;
     color: white;
     display: flex;
-    justify-content:center;
-    align-items:center;
-
+    flex-direction:column;
+    align-items: center;
+    position: relative;
+    top: 20vh;
 }
 
-.mot{
+#mot{
     font-family: "Franklin Gothic Demi";
-    font-size: 24pt;
-    line-height: 0vh;
-    width:100vw;
-    display: flex;
-    align-items:center;
-    flex-direction:column;
-    position: absolute;
-    top: 40vw;
-    margin: 0;
+    font-size: 6vmin;
+    position: relative;
+    top: 15%;
+    margin: 0 0 18px 0;
 }
 
 .line{
     background-color:rgb(240,94,237);
-    width:100px;
+    width: 150px;
     height:7px;
-    position: absolute;
-    top: 43vw;
-    margin: 0;
+    position: relative;
+    top: 15%;
+    margin: 0 0 20px 0;
+}
+
+.info_box{
+    font-family: "Franklin Gothic Book";
+    font-size: 5vmin;
+    width:100vw;
+    height: 25%;
+    display: flex;
+    flex-direction:column;
+    align-items:center;
+    position: relative;
+    top: 20%;
 }
 
 .info{
-    font-family: "Franklin Gothic Book";
-    font-size: 20pt;
-    line-height: 0vh;
-    width:100vw;
-    display: flex;
-    align-items:center;
-    flex-direction:column;
-    position: absolute;
-    top: 45vw;
     margin: 0;
 }
 
 .cu{
-    background:url(./img/btn/contactUs.png);
-    background-size:cover;
-    position:absolute;
-    top:55vw;
+    background: url(./img/btn/contactUs.png) no-repeat center / contain;
     height:48px;
     width:196px;
+    position:relative;
+    top: 30%;
 }
+
 
 /*bottom info part*/
 #bottom{
     font-family: "Franklin Gothic Book";
-    font-size: 16pt;
+    font-size: 4vmin;
     background-color:white;
     color: black;
-    height:6.6vh;
-    line-height: 3vh;
     width: 100vw;
+    height: 10vh;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items:center;
-    flex-direction: row;
-    position: absolute;
-    top:66vw;
+    flex-direction: column;
+    position: relative;
+    top: 35vh;
+}
+
+#bottom p{
+    margin: 0;
 }
