--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
 /*top bar part*/
 #navbar{
     font-family: "Franklin Gothic Demi";
-    font-size: 2.5vmax;
+    /*font-size: 2.5vmax;*/
+    font-size: 18pt;
     color: white;
     height: 20vh;
     width: 100vw;
@@ -64,7 +65,7 @@ body{
 
 #home, #project, #aboutus{
     margin: 0 4.17vw 0 0;
-    padding: 8pt 0;
+    padding: 7pt 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,12 +73,12 @@ body{
 
 .button::after {
     content: '';
-    width: 69px;
+    width: 65px;
     height: 6px;
     display: none;
     background-color: rgb(240,94,237);
     position: absolute;
-    bottom: 26px;
+    bottom: 33px;
 }
 
 #aboutus::after{
@@ -190,20 +191,20 @@ body{
 
 #mot{
     font-family: "Franklin Gothic Demi";
-    font-size: 6vmin;
+    font-size: 18pt;
     margin: 0 0 18px 0;
 }
 
 .line{
     background-color:rgb(240,94,237);
-    width: 150px;
-    height:7px;
+    width: 9vw;
+    height: 6px;
     margin: 0 0 30px 0;
 }
 
 .info_box{
     font-family: "Franklin Gothic Book";
-    font-size: 5vmin;
+    font-size: 14pt;
     width:100vw;
     height: auto;
     display: flex;
@@ -267,11 +268,11 @@ body{
 /*bottom info part*/
 #bottom{
     font-family: "Franklin Gothic Book";
-    font-size: 4vmin;
+    font-size: 11pt;
     background-color:white;
     color: rgb(123, 123, 123);
     width: 100vw;
-    height: 75pt;
+    height: 70pt;
     display: flex;
     justify-content: center;
     align-items:center;
