--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 /*top bar part*/
 #navbar{
     font-family: "Franklin Gothic Demi";
-    font-size: 2.5vmax;
+    font-size: 18pt;
     color: white;
     height: 20vh;
     width: 100vw;
@@ -77,7 +77,8 @@ body{
     display: none;
     background-color: rgb(240,94,237);
     position: absolute;
-    bottom: 26px;
+    bottom: 5vh;
+
 }
 
 #aboutus::after{
@@ -118,17 +119,51 @@ body{
     height: 60vh;
     position: absolute;
     display: flex;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
-#head    { background: url(./img/photo/Lu.png) no-repeat center / contain; left: -34.31%; }
-#tu    { background: url(./img/photo/Tu.png) no-repeat center / contain; left: -9.03%; }
-#shen  { background: url(./img/photo/Shen.png) no-repeat center / contain; left: 16.18%; }
-#zhuang{ background: url(./img/photo/Zhuang.png) no-repeat center / contain; left: 41.39%; }
-#huang { background: url(./img/photo/Huang.png) no-repeat center / contain; left: 66.6%; }
-#lu    { background: url(./img/photo/Lu.png) no-repeat center / contain; left: 91.81%; }
-#tail    { background: url(./img/photo/Tu.png) no-repeat center / contain; left: 117.09%; }
+#head{ background: url(./img/photo/Lu.png) no-repeat center / contain; left: -34.31%; }
+#head_back{
+    background: url(./img/nameCard/Lu.png) no-repeat center / contain; left: -34.31%;
+    display: none;
+}
+
+#tu_back{ 
+    background: url(./img/nameCard/Tu.png) no-repeat center / contain; left: -9.03%; 
+    display: none;
+}
+#tu{background: url(./img/photo/Tu.png) no-repeat center / contain; left: -9.03%;}
+
+#shen_back{
+    background: url(./img/nameCard/Shen.png) no-repeat center / contain; left: 16.18%;
+    display: none;
+}
+#shen{background: url(./img/photo/Shen.png) no-repeat center / contain; left: 16.18%;}
+
+#zhuang_back{ 
+    background: url(./img/nameCard/Zhuang.png) no-repeat center / contain; left: 41.39%; 
+    display: none;
+}
+#zhuang{background: url(./img/photo/Zhuang.png) no-repeat center / contain; left: 41.39%;}
+
+#huang_back{
+    background: url(./img/nameCard/Huang.png) no-repeat center / contain; left: 66.6%;
+    display: none;    
+}
+#huang {background: url(./img/photo/Huang.png) no-repeat center / contain; left: 66.6%;}
+
+#lu_back{
+    background: url(./img/nameCard/Lu.png) no-repeat center / contain; left: 91.81%;
+    display: none;
+}
+#lu{background: url(./img/photo/Lu.png) no-repeat center / contain; left: 91.81%;}
+
+#tail{ background: url(./img/photo/Tu.png) no-repeat center / contain; left: 117.09%; }
+#tail_back{
+    background: url(./img/nameCard/Tu.png) no-repeat center / contain; left: 117.09%;
+    display: none;
+}
+
+
 
 
 #arrow-left, #arrow-right{
@@ -170,7 +205,7 @@ body{
 
 #mot{
     font-family: "Franklin Gothic Demi";
-    font-size: 6vmin;
+    font-size: 18pt;
     margin: 0 0 18px 0;
 }
 
@@ -183,7 +218,7 @@ body{
 
 .info_box{
     font-family: "Franklin Gothic Book";
-    font-size: 5vmin;
+    font-size: 14pt;
     width:100vw;
     height: auto;
     display: flex;
@@ -212,7 +247,7 @@ body{
     width: 68.48%;
     height: 100%;
     transition: 0.75s;
-    z-index: 0;
+    z-index: 1;
 }
 
 .cu{
@@ -237,17 +272,18 @@ body{
     max-width: 196px;
 }
 
-/*
+
 .group_pic:hover{
-    opacity: 0.5;
-    z-index: 0;
-}*/
+    opacity: 0.5 !important;
+    z-index: 0
+}
+
 
 
 /*bottom info part*/
 #bottom{
     font-family: "Franklin Gothic Book";
-    font-size: 4vmin;
+    font-size: 11pt;
     background-color:white;
     color: rgb(123, 123, 123);
     width: 100vw;
